# revgame

./: .gitignore  AGENTS.md  Cargo.toml  config.json  install.ps1  install.sh
.beads/: config.yaml
.claude/: settings.json
scripts/: camera.lua  healthbar.lua  player.lua  world.lua
src/: lib.rs  main.rs
src/api/: auth.rs  client.rs  matchmaking.rs  mod.rs  sessions.rs  types.rs
src/game/: agent.rs  camera.rs  components.rs  mod.rs  player.rs  scripted.rs  state.rs  systems.rs  world.rs
src/plugins/: api_plugin.rs  mod.rs
src/scripting/: bindings.rs  hot_reload.rs  mod.rs  runtime.rs
tests/: api_integration.rs
tests/common/: mod.rs
