[package]
name = "revgame"
version = "0.1.0"
edition = "2021"
description = "Bevy game client"
license = "MIT"

[features]
default = []
# Full graphics support (requires system libs: alsa, wayland, x11)
graphics = ["dep:bevy", "scripting"]
# Lua scripting with hot reload
scripting = ["dep:mlua", "dep:notify", "dep:notify-debouncer-mini"]

[dependencies]
# Bevy - optional, only for graphics builds
bevy = { version = "0.15", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Lua scripting
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize", "send"], optional = true }
notify = { version = "7.0", optional = true }
notify-debouncer-mini = { version = "0.5", optional = true }

[[bin]]
name = "revgame"
required-features = ["graphics"]

# Fast compile config for Bevy
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
